# PicSocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  requirements.txt  setup.py
example/: CMakeLists.txt  picsocket_receiver.cpp
example/cpp/: picsocket_sender.cpp
example/python/: picsocket_receiver.py  picsocket_sender.py
include/: blocking_queue.h  network.h  opencv.h  pic_socket.h  udp.h
picsocket/: CMakeLists.txt  __init__.py  picsocket.py  python_interface.cpp
source/: network.cpp  opencv.cpp  pic_socket.cpp  udp_receiver.cpp  udp_sender.cpp
